Docker run test in workflow

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -52,4 +52,8 @@ jobs:
         echo VERSION=$VERSION
         
         docker tag dockerfile-templates $IMAGE_ID:$VERSION
+        
+        # Container run test
+        docker run -ti dockerfile-templates
+        
         docker push $IMAGE_ID:$VERSION   
